[gd_scene load_steps=15 format=2]

[ext_resource path="res://MainCamera.gd" type="Script" id=1]
[ext_resource path="res://Utils/UnitController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battlefield/BattleField.tscn" type="PackedScene" id=3]
[ext_resource path="res://TestScene.gd" type="Script" id=4]
[ext_resource path="res://Items/Inventory/LeadersInventories.gd" type="Script" id=5]
[ext_resource path="res://GUI/ChooseTeamButton/ChooseTeamButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/Shop/Shop.gd" type="Script" id=7]
[ext_resource path="res://GUI/ChooseLeaderButtons/ChooseLeaderButtons.tscn" type="PackedScene" id=8]
[ext_resource path="res://GUI/Play.tscn" type="PackedScene" id=9]
[ext_resource path="res://GUI/StatsWindow/StatsWindow.tscn" type="PackedScene" id=10]
[ext_resource path="res://GUI/Minimap/Minimap.tscn" type="PackedScene" id=11]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.192157, 0.188235, 0.223529, 1 )

[node name="TestScene" type="Node2D"]
script = ExtResource( 4 )

[node name="Menu" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -232.0
margin_bottom = -200.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueButton" parent="Menu/HBoxContainer" instance=ExtResource( 6 )]
modulate = Color( 0, 0.666667, 1, 1 )
margin_left = 102.0
margin_right = 202.0
margin_bottom = 32.0
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Blue"

[node name="Play" parent="Menu/HBoxContainer" instance=ExtResource( 9 )]
pause_mode = 2
modulate = Color( 0.258824, 1, 0, 1 )
margin_left = 206.0
margin_right = 306.0
margin_bottom = 32.0
toggle_mode = false
group = SubResource( 3 )
text = "Play"

[node name="RedButton" parent="Menu/HBoxContainer" instance=ExtResource( 6 )]
modulate = Color( 1, 0.176471, 0.176471, 1 )
margin_left = 310.0
margin_right = 410.0
margin_bottom = 32.0
toggle_mode = true
group = SubResource( 2 )
team = 3

[node name="Label" type="Label" parent="Menu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 205.0
margin_top = -243.0
margin_right = -206.0
margin_bottom = -229.0
size_flags_horizontal = 3
text = "Shotcaller"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseLeader" parent="Menu" instance=ExtResource( 8 )]
visible = false
margin_top = 126.0
margin_right = -104.0
margin_bottom = -262.0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="GUI"]
visible = false
margin_left = 85.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsWindow" parent="GUI" instance=ExtResource( 10 )]
visible = false
position = Vector2( 203, 421 )

[node name="Minimap" parent="GUI" instance=ExtResource( 11 )]
visible = false
position = Vector2( 0, 402 )

[node name="Shop" type="Control" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopWindow" type="Panel" parent="GUI/Shop"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 249.0
margin_top = 43.0
margin_right = 470.0
margin_bottom = 371.0
custom_styles/panel = SubResource( 4 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/Shop/ShopWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Shop/ShopWindow/ScrollContainer"]
margin_right = 241.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HSeparator" type="HSeparator" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 241.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 241.0
margin_bottom = 144.0
text = "Equip"

[node name="EquipItems" type="HBoxContainer" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 241.0
margin_bottom = 148.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 241.0
margin_bottom = 156.0

[node name="Label2" type="Label" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 241.0
margin_bottom = 174.0
text = "Consumable"

[node name="ConsumableItems" type="HBoxContainer" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 241.0
margin_bottom = 178.0
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="GUI/Shop/ShopWindow/ScrollContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 241.0
margin_bottom = 186.0

[node name="LeadersInventories" type="HBoxContainer" parent="GUI/Shop"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_top = 420.0
margin_right = 495.0
margin_bottom = 464.0
size_flags_vertical = 8
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="GUI/Shop"]
margin_left = 410.0
margin_top = 2.0
margin_right = 510.0
margin_bottom = 42.0
size_flags_horizontal = 11
text = "shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldControl" type="Control" parent="GUI/Shop"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="GUI/Shop/GoldControl"]
anchor_left = -3.7
anchor_right = -3.7
margin_left = 504.0
margin_top = 13.0
margin_right = 544.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.94902, 0.772549, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel2" type="Label" parent="GUI/Shop/GoldControl"]
anchor_left = -3.95
anchor_right = -3.95
margin_left = 504.0
margin_top = 13.0
margin_right = 512.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.94902, 0.772549, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "$"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="GUI"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 79.0
margin_bottom = 42.0
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreepRespawnTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 896, 896 )
current = true
limit_left = -900
limit_top = -900
limit_right = 900
limit_bottom = 900
smoothing_speed = 2.0
script = ExtResource( 1 )

[node name="UnitController" parent="." instance=ExtResource( 2 )]
z_index = 10

[node name="BattleField" parent="." instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GUI/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="CreepRespawnTimer" to="." method="_on_CreepRespawnTimer_timeout"]
